<resources>
    <string name="app_name">Kidisun1</string>
    <string name="sign_in">Войти</string>
    <string name="log_in">Зарегестрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="next">Далее</string>
    <string name="address">Электроная почта</string>
    <string name="surname">Фамилия</string>
    <string name="password">Пароль</string>
    <string name="forgotpassword">Забыли пароль?</string>
    <string name="another">или</string>
    <string name="sign_up">Вход</string>
    <string name="search">Поиск</string>
    <string name="search1">Введите название занятия</string>
    <string name="date1">6 вт янв</string>
    <string name="date2">7 ср янв</string>
    <string name="date3">8 чт янв</string>
    <string name="date4">9 пт янв</string>
    <string name="date5">10 сб янв</string>
    <string name="date6">11 вс янв</string>
    <string name="date7">12 пн янв</string>
    <string name="firstp_1">Рисование - 1 час</string>
    <string name="firstp_2">Осталось 6 мест</string>
    <string name="firstp_3">6-13 лет</string>
    <string name="firstp_4">10:00-11:00</string>
    <string name="secondp_1">Танцы - 2 часа</string>
    <string name="secondp_2">Осталось 2 места</string>
    <string name="secondp_3">10-16 лет</string>
    <string name="secondp_4">13:00-15:00</string>
    <string name="thirdp_1">Плавание - 1,5 час</string>
    <string name="thirdp_2">Осталось 5 мест</string>
    <string name="thirdp_3">до 18 лет</string>
    <string name="thirdp_4">15:30-17:00</string>
    <string name="forthp_1">Гимнастика - 1 час</string>
    <string name="forthp_2">Осталось 3 места</string>
    <string name="forthp_3">до 10 лет</string>
    <string name="forthp_4">11:00-12:00</string>
</resources>