<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kidisun2"
    android:background="@drawable/kidi2">

    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="514dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="268dp"
            android:layout_height="63dp"
            android:layout_marginBottom="70dp"
            android:gravity="center"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textView7"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginBottom="25dp"
            android:autofillHints="username"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:textColor="@color/white"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/textView8"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginBottom="25dp"
            android:autofillHints="username"
            android:inputType="textPersonName"
            android:text="@string/surname"
            android:textColor="@color/white"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/textView9"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginBottom="25dp"
            android:autofillHints="emailAddress"
            android:inputType="textPersonName"
            android:text="@string/address"
            android:textColor="@color/white"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/textView10"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginBottom="60dp"
            android:autofillHints="password"
            android:inputType="textPersonName"
            android:text="@string/password"
            android:textColor="@color/white"
            tools:ignore="LabelFor" />

        <androidx.cardview.widget.CardView
            android:layout_width="246dp"
            android:layout_height="76dp"
            android:backgroundTint="@color/teal_700"
            app:cardCornerRadius="100dp"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="588dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/teal_700"
                android:text="@string/next"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>