<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kidisun4"
    android:background="@drawable/kidi2">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="47dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="325dp"
            android:layout_height="44dp"
            app:cardCornerRadius="100dp"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="81dp">

            <EditText
                android:id="@+id/textView7"
                android:layout_width="317dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:autofillHints="username"
                android:background="@color/white"
                android:inputType="textPersonName"
                android:text="@string/search1"
                android:textColor="@color/grey"
                tools:ignore="LabelFor" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            app:srcCompat="@drawable/search" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/calendar" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="397dp"
        android:layout_height="41dp"
        android:layout_marginTop="31dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/date1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="32dp"
            android:layout_height="38dp"
            android:layout_marginStart="25dp"
            android:text="@string/date2"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="32dp"
            android:layout_height="38dp"
            android:layout_marginStart="27dp"
            android:text="@string/date3"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="32dp"
            android:layout_height="38dp"
            android:layout_marginStart="27dp"
            android:text="@string/date4"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="35dp"
            android:layout_height="37dp"
            android:layout_marginStart="27dp"
            android:text="@string/date5"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="35dp"
            android:layout_height="37dp"
            android:layout_marginStart="22dp"
            android:text="@string/date6"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:text="@string/date7"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="439dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="361dp"
            android:layout_height="93dp"
            app:cardCornerRadius="20dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="223dp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                app:srcCompat="@drawable/picture1" />

            <LinearLayout
                android:layout_width="361dp"
                android:layout_height="93dp">

                <LinearLayout
                    android:layout_width="154dp"
                    android:layout_height="83dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="144dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/firstp_1"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="45dp"
                        android:text="@string/firstp_2"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="59dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="110dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/firstp_3"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="@string/firstp_4"
                        android:textColor="@color/black"
                        android:textSize="11sp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="362dp"
            android:layout_height="95dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="327dp">


            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="362dp"
                android:layout_height="95dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/picture2" />

            <LinearLayout
                android:layout_width="361dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="154dp"
                    android:layout_height="83dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="144dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/secondp_1"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="45dp"
                        android:text="@string/secondp_2"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/secondp_3"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="@string/secondp_4"
                        android:textColor="@color/black"
                        android:textSize="11sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="362dp"
            android:layout_height="95dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="435dp">


            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="362dp"
                android:layout_height="95dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/picture3" />

            <LinearLayout
                android:layout_width="362dp"
                android:layout_height="95dp">

                <LinearLayout
                    android:layout_width="154dp"
                    android:layout_height="83dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="144dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/thirdp_1"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="45dp"
                        android:text="@string/thirdp_2"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/thirdp_3"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="@string/thirdp_4"
                        android:textColor="@color/black"
                        android:textSize="11sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="362dp"
            android:layout_height="95dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="542dp">


            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="362dp"
                android:layout_height="95dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/picture4" />

            <LinearLayout
                android:layout_width="362dp"
                android:layout_height="95dp">

                <LinearLayout
                    android:layout_width="154dp"
                    android:layout_height="83dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView26"
                        android:layout_width="144dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/forthp_1"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="45dp"
                        android:text="@string/forthp_2"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/forthp_3"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="@string/forthp_4"
                        android:textColor="@color/black"
                        android:textSize="11sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/kids" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/profile" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/settings" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>