<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kidisun3"
    android:background="@drawable/kidi2">

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="584dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755">

        <TextView
            android:id="@+id/textView"
            android:layout_width="268dp"
            android:layout_height="63dp"
            android:layout_marginBottom="70dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textView9"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginBottom="25dp"
            android:autofillHints="emailAddress"
            android:inputType="textPersonName"
            android:text="@string/address"
            android:textColor="@color/white"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/textView10"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginBottom="50dp"
            android:autofillHints="password"
            android:inputType="textPersonName"
            android:text="@string/password"
            android:textColor="@color/white"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="288dp"
            android:layout_height="26dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotpassword"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="246dp"
            android:layout_height="76dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal_700"
            app:cardCornerRadius="100dp"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="588dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/teal_700"
                android:text="@string/next"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/another"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="194dp"
            android:layout_height="58dp"
            android:layout_marginTop="45dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/apple" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/vk" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>